Ensured the site currently worked on mobile devices

--- a/contact.css
+++ b/contact.css
@@ -96,7 +96,7 @@ form{
 
 
   .Twitter{
-    width: 50%;
+    width: 70%;
       height: 60vh;
       overflow: scroll;
       margin: auto;
